@@ -1129,6 +1129,7 @@ XRCDLL_OBJECTS =  \
 	$(OBJS)\xrcdll_xh_slidr.obj \
 	$(OBJS)\xrcdll_xh_spin.obj \
 	$(OBJS)\xrcdll_xh_split.obj \
+	$(OBJS)\xrcdll_xh_srchctrl.obj \
 	$(OBJS)\xrcdll_xh_statbar.obj \
 	$(OBJS)\xrcdll_xh_stbmp.obj \
 	$(OBJS)\xrcdll_xh_stbox.obj \
@@ -1195,6 +1196,7 @@ XRCLIB_OBJECTS =  \
 	$(OBJS)\xrclib_xh_slidr.obj \
 	$(OBJS)\xrclib_xh_spin.obj \
 	$(OBJS)\xrclib_xh_split.obj \
+	$(OBJS)\xrclib_xh_srchctrl.obj \
 	$(OBJS)\xrclib_xh_statbar.obj \
 	$(OBJS)\xrclib_xh_stbmp.obj \
 	$(OBJS)\xrclib_xh_stbox.obj \
@@ -1466,6 +1468,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_OBJECTS =  \
 	$(OBJS)\monodll_xh_slidr.obj \
 	$(OBJS)\monodll_xh_spin.obj \
 	$(OBJS)\monodll_xh_split.obj \
+	$(OBJS)\monodll_xh_srchctrl.obj \
 	$(OBJS)\monodll_xh_statbar.obj \
 	$(OBJS)\monodll_xh_stbmp.obj \
 	$(OBJS)\monodll_xh_stbox.obj \
@@ -2097,6 +2100,7 @@ ____MONOLIB_GUI_SRC_FILENAMES_1_OBJECTS =  \
 	$(OBJS)\monolib_xh_slidr.obj \
 	$(OBJS)\monolib_xh_spin.obj \
 	$(OBJS)\monolib_xh_split.obj \
+	$(OBJS)\monolib_xh_srchctrl.obj \
 	$(OBJS)\monolib_xh_statbar.obj \
 	$(OBJS)\monolib_xh_stbmp.obj \
 	$(OBJS)\monolib_xh_stbox.obj \
@@ -5891,6 +5895,9 @@ $(OBJS)\monodll_xh_spin.obj: ..\..\src\xrc\xh_spin.cpp
 $(OBJS)\monodll_xh_split.obj: ..\..\src\xrc\xh_split.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) $**
 
+$(OBJS)\monodll_xh_srchctrl.obj: ..\..\src\xrc\xh_srchctrl.cpp
+	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) $**
+
 $(OBJS)\monodll_xh_statbar.obj: ..\..\src\xrc\xh_statbar.cpp
 	$(CXX) -q -c -P -o$@ $(MONODLL_CXXFLAGS) $**
 
@@ -7957,6 +7964,9 @@ $(OBJS)\monolib_xh_spin.obj: ..\..\src\xrc\xh_spin.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_xh_split.obj: ..\..\src\xrc\xh_split.cpp
+	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) $**
+
+$(OBJS)\monolib_xh_srchctrl.obj: ..\..\src\xrc\xh_srchctrl.cpp
 	$(CXX) -q -c -P -o$@ $(MONOLIB_CXXFLAGS) $**
 
 $(OBJS)\monolib_xh_statbar.obj: ..\..\src\xrc\xh_statbar.cpp
@@ -13161,6 +13171,9 @@ $(OBJS)\xrcdll_xh_spin.obj: ..\..\src\xrc\xh_spin.cpp
 $(OBJS)\xrcdll_xh_split.obj: ..\..\src\xrc\xh_split.cpp
 	$(CXX) -q -c -P -o$@ $(XRCDLL_CXXFLAGS) $**
 
+$(OBJS)\xrcdll_xh_srchctrl.obj: ..\..\src\xrc\xh_srchctrl.cpp
+	$(CXX) -q -c -P -o$@ $(XRCDLL_CXXFLAGS) $**
+
 $(OBJS)\xrcdll_xh_statbar.obj: ..\..\src\xrc\xh_statbar.cpp
 	$(CXX) -q -c -P -o$@ $(XRCDLL_CXXFLAGS) $**
 
@@ -13330,6 +13343,9 @@ $(OBJS)\xrclib_xh_spin.obj: ..\..\src\xrc\xh_spin.cpp
 	$(CXX) -q -c -P -o$@ $(XRCLIB_CXXFLAGS) $**
 
 $(OBJS)\xrclib_xh_split.obj: ..\..\src\xrc\xh_split.cpp
+	$(CXX) -q -c -P -o$@ $(XRCLIB_CXXFLAGS) $**
+
+$(OBJS)\xrclib_xh_srchctrl.obj: ..\..\src\xrc\xh_srchctrl.cpp
 	$(CXX) -q -c -P -o$@ $(XRCLIB_CXXFLAGS) $**
 
 $(OBJS)\xrclib_xh_statbar.obj: ..\..\src\xrc\xh_statbar.cpp
